# serdenom_csv

./: Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs
tests/: either.csv  enum.csv  inner_struct.csv  primitives.csv  tests.rs  tuple.csv
