[package]
name = "serdenom_csv"
version = "0.3.1"
description = "Serde library for CSV (with nested structures) parsing with Nom"
authors = ["Dragonink"]
repository = "https://github.com/Dragonink/serdenom_csv"
categories = ["parser-implementations"]
keywords = ["serde", "nom", "csv"]
edition = "2021"

[features]
stream = ["dep:futures"]

[dependencies]
either = "1"
nom = "7"
serde = "1"
[dependencies.futures]
optional = true
version = "0"
default-features = false

[dev-dependencies.either]
version = "1"
features = ["serde"]
[dev-dependencies.futures]
version = "0"
features = ["executor"]
[dev-dependencies.serde]
version = "1"
features = ["serde_derive"]
